--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,10 @@
 #
 #    pip-compile requirements.in
 #
-aiofiles==24.1.0
-    # via aurelio-sdk
 aiohappyeyeballs==2.6.1
     # via aiohttp
 aiohttp==3.12.12
-    # via
-    #   aurelio-sdk
-    #   litellm
-    #   semantic-router
+    # via semantic-router
 aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
@@ -22,12 +17,9 @@ anyio==4.9.0
     #   httpx
     #   openai
 attrs==25.3.0
-    # via
-    #   aiohttp
-    #   jsonschema
-    #   referencing
-aurelio-sdk==0.0.19
-    # via semantic-router
+    # via aiohttp
+build==1.2.2.post1
+    # via pip-tools
 certifi==2025.4.26
     # via
     #   httpcore
@@ -36,62 +28,38 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
     # via requests
 click==8.2.1
-    # via litellm
+    # via pip-tools
 colorama==0.4.6
     # via semantic-router
 colorlog==6.9.0
-    # via
-    #   aurelio-sdk
-    #   semantic-router
+    # via semantic-router
 distro==1.9.0
     # via openai
-filelock==3.18.0
-    # via huggingface-hub
 frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.5.1
-    # via huggingface-hub
 h11==0.16.0
     # via httpcore
-hf-xet==1.1.3
-    # via huggingface-hub
 httpcore==1.0.9
     # via httpx
 httpx==0.28.1
-    # via
-    #   litellm
-    #   openai
-huggingface-hub==0.32.5
-    # via tokenizers
+    # via openai
 idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==8.7.0
-    # via litellm
-jinja2==3.1.6
-    # via litellm
 jiter==0.10.0
     # via openai
 joblib==1.5.1
     # via scikit-learn
-jsonschema==4.24.0
-    # via litellm
-jsonschema-specifications==2025.4.1
-    # via jsonschema
-litellm==1.72.3
-    # via semantic-router
-markupsafe==3.0.2
-    # via jinja2
 multidict==6.4.4
     # via
     #   aiohttp
     #   yarl
-numpy==2.3.0
+numpy==1.26.4
     # via
     #   -r requirements.in
     #   pandas
@@ -101,11 +69,12 @@ numpy==2.3.0
 openai==1.86.0
     # via
     #   -r requirements.in
-    #   litellm
     #   semantic-router
 packaging==25.0
-    # via huggingface-hub
+    # via build
 pandas==2.3.0
+    # via -r requirements.in
+pip-tools==7.4.1
     # via -r requirements.in
 propcache==0.3.2
     # via
@@ -113,45 +82,32 @@ propcache==0.3.2
     #   yarl
 pydantic==2.11.5
     # via
-    #   aurelio-sdk
-    #   litellm
     #   openai
     #   semantic-router
 pydantic-core==2.33.2
     # via pydantic
+pyproject-hooks==1.2.0
+    # via
+    #   build
+    #   pip-tools
 python-dateutil==2.9.0.post0
     # via pandas
 python-dotenv==1.1.0
-    # via
-    #   -r requirements.in
-    #   aurelio-sdk
-    #   litellm
+    # via -r requirements.in
 pytz==2025.2
     # via pandas
 pyyaml==6.0.2
-    # via
-    #   huggingface-hub
-    #   semantic-router
-referencing==0.36.2
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
+    # via semantic-router
 regex==2024.11.6
     # via
     #   semantic-router
     #   tiktoken
 requests==2.32.4
     # via
-    #   aurelio-sdk
-    #   huggingface-hub
-    #   requests-toolbelt
+    #   requests-mock
     #   tiktoken
-requests-toolbelt==1.0.0
-    # via aurelio-sdk
-rpds-py==0.25.1
-    # via
-    #   jsonschema
-    #   referencing
+requests-mock==1.12.1
+    # via semantic-router
 scikit-learn==1.7.0
     # via -r requirements.in
 scipy==1.15.3
@@ -167,38 +123,29 @@ sniffio==1.3.1
 threadpoolctl==3.6.0
     # via scikit-learn
 tiktoken==0.9.0
-    # via
-    #   litellm
-    #   semantic-router
-tokenizers==0.21.1
-    # via litellm
-tornado==6.5.1
-    # via
-    #   aurelio-sdk
-    #   semantic-router
+    # via semantic-router
 tqdm==4.67.1
     # via
     #   -r requirements.in
-    #   huggingface-hub
     #   openai
 typing-extensions==4.14.0
     # via
     #   anyio
-    #   huggingface-hub
     #   openai
     #   pydantic
     #   pydantic-core
-    #   referencing
     #   typing-inspection
 typing-inspection==0.4.1
     # via pydantic
 tzdata==2025.2
     # via pandas
 urllib3==1.26.20
-    # via
-    #   requests
-    #   semantic-router
+    # via requests
+wheel==0.45.1
+    # via pip-tools
 yarl==1.20.1
     # via aiohttp
-zipp==3.23.0
-    # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
